@@ -10,7 +10,7 @@ generated with \code{plot.survfit}.
 }
 \usage{
 \method{lines}{survfit}(x, type="s", mark=3, col=1, lty=1,
-lwd=1, mark.time=TRUE, 
+        lwd=1, cex=1, mark.time=TRUE, 
 	xscale=1,  firstx=0, firsty=1, xmax, fun, conf.int=FALSE,  ...)
 \method{points}{survfit}(x, xscale, xmax, fun, ...)
 }
@@ -23,9 +23,9 @@ a survival object, generated from the \code{survfit} or \code{survexp} functions
 the line type, as described in \code{lines}.  The default is a step function 
 for \code{survfit} objects, and a connected line for \code{survexp} objects. 
 }
-\item{mark, col, lty, lwd}{
-vectors giving the mark symbol, color, line type and line width for the 
-added curves. 
+\item{mark, col, lty, lwd, cex}{
+  vectors giving the mark symbol, color, line type, line width and
+  character size for the added curves. 
 }
 \item{...}{other graphical parameters}
 \item{mark.time}{
