@@ -8,6 +8,7 @@
 
 \newcommand{\myfig}[1]{\resizebox{\textwidth}{!}
                         {\includegraphics{figures/#1.pdf}}}
+\newcommand{\code}[1]{\texttt{#1}}
 
 \noweboptions{breakcode}
 \title{Survival Package Functions}
